<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sostanze"
    android:contentDescription="@string/buttonBack"
    tools:context=".MenuSostanze">


    <Button
        android:id="@+id/button8"
        android:layout_width="210dp"
        android:layout_height="134dp"
        android:background="@android:color/transparent"
        android:onClick="ButtonFibre"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/button9"
        android:layout_width="200dp"
        android:layout_height="144dp"
        android:background="@android:color/transparent"
        android:onClick="ButtonProteine"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button11"
        android:layout_width="229dp"
        android:layout_height="143dp"
        android:background="@android:color/transparent"
        android:onClick="ButtonAcqua"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button12"
        android:layout_width="230dp"
        android:layout_height="152dp"
        android:background="@android:color/transparent"
        android:onClick="ButtonGrassi"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="138dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonmezzi"
        android:onClick="ButtonVitamine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <Button
        android:id="@+id/button14"
        android:layout_width="219dp"
        android:layout_height="144dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonauto"
        android:onClick="ButtonCarboidrati"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:contentDescription="@string/buttonBack"
        android:onClick="ButtonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:contentDescription="@string/buttonHome"
        android:onClick="ButtonHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home_button" />


</androidx.constraintlayout.widget.ConstraintLayout>